kube/deploy/apps/whoogle/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app whoogle
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow Whoogle to connect to public Internet
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
    # allow querying $IP_HOME_DNS
    - toCIDRSet:
        - cidr: "${IP_HOME_DNS}/32"
      toPorts:
        - ports:
            - port: "53"
